Fixed footer alignment

--- a/style.css
+++ b/style.css
@@ -409,6 +409,7 @@ div.desc h4 {
 .reviews {
     height: 100vh;
     width: 100%;
+    background-color: #ffe1da;
 }
 
 .reviews h1 {
@@ -502,4 +503,40 @@ div.desc h4 {
     font-weight: lighter;
     margin: -1.15rem .25rem;
     color: #4c2666;
+}
+
+/*Footer Section*/
+
+.footer {
+    height: 35vh;
+    width: 100%;
+}
+
+.footer-container {
+    display: inline-flex;
+    margin-left: 25rem;
+}
+
+.footer-column {
+    margin: 3em 2em 2em 4em;
+}
+
+.footer-column h2 {
+    font-family: 'Amatic SC', cursive;
+    font-size: 2.5rem;
+    font-weight: bolder;
+    color: #4c2666;
+    letter-spacing: .25rem;
+} 
+
+.footer-column h5 {
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 1.25rem;
+    line-height: 1.5;
+    color: #4c2666;
+}
+
+.footer-column img {
+    height: 6em;
+    width: 12em;
 }
